# slackline

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  slack-app-manifest.json  slack-app-manifest.yaml  slack_app_manifest.json  vitest.config.js
docs/: SLACK_SETUP.md
docs/plans/: 2025-10-23-slackline-bot.md
src/: app.js
src/database/: db.js  migrations.sql  schema.sql
src/handlers/: commandHandler.js  messageHandler.js
src/modals/: vacationModal.js
src/services/: achievementService.js  daysOffService.js  streakService.js
src/slackline/: __init__.py  bot.py  streaks.py
src/utils/: dateUtils.js
tests/: test_bot_scopes.py  test_streaks.py
tests/database/: db.test.js
tests/services/: achievementService.test.js  daysOffService.test.js  streakService.test.js
tests/utils/: dateUtils.test.js
